proper character movement on the map

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ game.init.castile.coordinates=7:1
 game.init.castile.sixe.rows=3
 game.init.castile.sixe.columns=4
 
-game.objects.directory=D:/dev/source/castile/src/main/resources/mongo/gameObjects
+game.objects.directory=/mongo/gameObjects
