--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ game.init.castile.coordinates=1:7
 game.init.castile.sixe.rows=3
 game.init.castile.sixe.columns=4
 
-game.objects.directory=mongo/gameObjects
+game.objects.directory=classpath*:/mongo/gameObjects/*.json
