reworking resounce loading

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,4 +15,5 @@ game:
                 rows: 3
                 columns: 4
     objects:
-        directory: "classpath*:/mongo/gameObjects/*.json"
+        descriptors: "classpath*:/descriptors/*.json"
+        images: "classpath*:/images/*.png"
